@@ -1,6 +1,8 @@
 Known problems in 6.2 version:
 
   * New XML format does not work with Intel v.12 compiler
+  * New format for charge density no longer allows to perform a non-scf
+    calculation with k-points starting from a scf calculation at Gamma
 
 New in 6.2 version:
 
